// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProducCard debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card 
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProducCard debe mostrar el componente correctamente con un children personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card 
  </h1>
</div>
`;
